# WI-IAT2020

./: README.md  requirements.txt
data_exploration/: .gitignore  Extract Meta from Crawled Datasets.ipynb  pyproject.toml  template_commands
data_exploration/assocation_rules/: daily-mail.py  guardian.py
data_exploration/community-graph/: graph_info.py
data_exploration/community-graph/daily-mail/: graph_only_max10comments.py  most_recent_power_user.py
data_exploration/community-graph/guardian/: Graph.ipynb  bipartite_graph.py  bipartite_graph_max10.py  graph.py  graph_only_max10comments.py  most_recent_power_user.py  user_count_co-occurences.py
data_exploration/insights/embedding_visualization/: word2vec.py
data_exploration/insights/numer-of-articles/: Visualization.ipynb
data_exploration/insights/post-per-user/: Check most comments user.ipynb  DailyMail.ipynb  Guardian.ipynb  OneMillionPosts.ipynb  Process Daily Mail.ipynb  The Independent.ipynb  Visualization.ipynb  YNACC.ipynb
data_exploration/insights/replies/: Aggregation Number of Replies.ipynb  Visualization.ipynb
data_exploration/insights/threads/: Aggregation.ipynb  Visualization.ipynb
data_exploration/insights/time-data/: Temporal Analysis Aggregation User Count and Comment Count.ipynb  Visualization.ipynb  (+1 more)
data_exploration/jp-data-analysis/: ARticleDates.ipynb  CategoriesVisualized.ipynb  CategoriesVisualizedByComments.ipynb
data_exploration/tests/: offset_test.py
data_exploration/user-activity/: List of Timestamps.ipynb  Only Visualization Guardian.ipynb  Visualize Guardian.ipynb
(+155 files in other folders)
