[tool.poetry]
name = "masterthesis_data_jupyter"
version = "0.1.0"
description = ""
authors = ["Victor Künstler <victor.kuenstler@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pylint = "^2.3"
numpy = "^1.16"
scipy = "^1.3"
matplotlib = "^3.1"
jupyter = "^1.0"
pandas = "^0.24.2"
networkx = "^2.3"
rope = "^0.14.0"
seaborn = "^0.9.0"
autopep8 = "^1.4"
gensim = "^3.7"
fire = "^0.1.3"
mlxtend = "^0.16.0"
cufflinks = "^0.15.0"
plotly = "^3.10"
plotly_express = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
